--- a/web/css/CSS1.css
+++ b/web/css/CSS1.css
@@ -1,27 +1,22 @@
-#titre1
+#header
 {
 	font-size : 60px;
 	font-weight : bold;
-	/*text-align : center;*/
+	text-align : center;
 	margin-left : 20px;
 	margin-top : 25px;
-	height : 80px;
 	vertical-align : middle;
 }
 
-#wrapper_outer
+#menu
 {
 	position:absolute;
 	height:100%;
-	top:0;
-	left:0;
 	width:100%;
 }
 
 #ul_menu 
 {
- padding:0;
- margin-left : 20%;
  list-style-type:none;
 }
  
@@ -55,13 +50,8 @@
 
 #wrapper
 {
-	min-height:100%;
-	width:720px;/*largeur du site*/
-	margin:auto;/*permet de centrer le site*/
-	margin-top : 150px;
-	margin-left : 380px;
-	margin-right : 380px;
-	margin-bottom : 50px;
+	width:950px;
+	margin: 0 auto;
 }
 
 footer
@@ -71,4 +61,9 @@ footer
 	margin-bottom :20px;
 	border-top : 1px;
 	border-bottom : 1px;
+}
+
+#main-container
+{
+    margin-top: 170px;
 }
