--- a/web/css/CSS1.css
+++ b/web/css/CSS1.css
@@ -57,6 +57,35 @@ body{
     border-right: 1px solid black;
 }
 
+#family_obj{
+    top:5px;
+}
+
+#ul_family{
+    
+    display: block;
+}
+
+  #list-family{
+    list-style-type: none;
+
+  }
+  
+   #list-family li{
+    width: 208px;
+    height: 300px;
+    border-right: 1px solid grey;
+    float:left;
+  }
+  
+   #list-family li h3{
+    text-align: center;
+  }
+  
+  #list-family li img{
+    max-width: 208px;
+  }
+
 #footer
 {
     text-align : center;
@@ -64,6 +93,8 @@ body{
     width: 930px;
     margin : 0 auto;
     vertical-align : middle;
+    clear: both;
+    padding-top: 25px;
 }
 
 #main-container
