fixed sous menu + optim css pagination

--- a/web/css/CSS1.css
+++ b/web/css/CSS1.css
@@ -40,7 +40,6 @@ body{
 
 #header
 {
-    font-size : 60px;
     font-weight : bold;
     text-align : center;
     vertical-align : middle;
@@ -81,11 +80,11 @@ body{
     /*pour avoir un effet "outset" avec IE :*/
 }
 
-#ul_menu  li a .root:hover 
+/*#ul_menu  li a .root:hover 
 {
     background-color:#EEEFEF;
 
-}
+}*/
 
 
 #wrapper
@@ -162,7 +161,6 @@ body{
 #main-container
 {
     margin-top: 200px;
-    margin-bottom: 100px;
 }
 
 #sf-content
@@ -233,14 +231,15 @@ div .h3-gallery{
 }
 
 li .family{
-    margin-top: -40px;
     clear: both;
-    z-index:-20;
+    display : block ;
+    height: 30px;
 }
 
 li .shop{
-    margin-top: -40px;
     clear: both;
+    display : block ;
+    height: 30px;
 }
 
 ul{
@@ -261,6 +260,12 @@ ul{
 
 ul #ssli-family{
     width:100%;
+    display:none;
+}
+
+ul #ssli-shop{
+    width:100%;
+    display:none;
 }
 
 /*li .shop{
@@ -273,3 +278,18 @@ div #menu_shop{
     margin-top: -62px;
 }
 
+.pagination {
+    padding-top:100px;
+    color:black;
+    text-align: center;
+    clear: both;
+     
+}
+.pagination a{
+    text-decoration: none;
+    color:black;
+}
+.pagination a:hover{
+    text-decoration: underline;
+    color:black;
+}
