--- a/web/css/CSS1.css
+++ b/web/css/CSS1.css
@@ -171,6 +171,7 @@ body{
     margin: 0 auto;
     padding-top: 30px;
     font-family: Trebuchet MS, serif;
+    height:600px;
 }
 
 #sf-content h3
