--- a/web/css/CSS1.css
+++ b/web/css/CSS1.css
@@ -92,7 +92,6 @@ body{
     margin: 0 auto;
     border-left: 1px solid black;
     border-right: 1px solid black;
-    padding-bottom: 60px;
     background-color: white;
     height: 100%;
 }
@@ -126,7 +125,7 @@ body{
     border-left: 2px dashed black;
     float:left;
     margin-right: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 
 }
 
@@ -155,13 +154,16 @@ body{
     margin-left: -1px;
     padding-right: 2px;
     padding-top: 30px;
+    padding-bottom: 1px;
     background-color: white;
     height:100%;
+    bottom: 0px;
 }
 
 #main-container
 {
     margin-top: 160px;
+    padding-bottom: 60px;
 }
 
 #sf-content
